--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Assignment1</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto+Slab&family=Roboto:wght@400;500;700&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="icon" href="images/favicon.png" type="image/x-icon" ">
         <link rel="stylesheet" href="css/style.css" />
     </head>
     <body>
@@ -75,42 +82,7 @@
                 <!-- content div closed -->
             </div>
             <!-- third_div closed -->
-            <!-- <div class="fourth_div">
-                <div class="course_desp2">
-                    <p>
-                        Our Web development team is always with candidates to
-                        create new innovations in PHP development and to improve
-                        in various aspects of PHP Programming. It’s a perfect
-                        platform for every newcomer in PHP programming to
-                        develop as an experienced PHP Developer. The best way to
-                        get expertise in programming is by doing Company Live
-                        Projects. The Outline of our PHP Training
-                    </p>
-                </div> -->
-            <!-- course_desp2 div closed -->
-            <!-- <div class="twoimgs">
-                    <div class="img1">
-                        <div class="inner_div">
-                            <p>
-                                Oral test to check the knowledge of Candidates
-                                as a part of preparing for the Technical rounds
-                                in Interviews.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="img2">
-                        <div class="inner_div">
-                            <p>
-                                Conducting mock Interviews to make the
-                                candidates more confident to attend the
-                                Interviews.
-                            </p>
-                        </div>
-                    </div>
-                </div> -->
-            <!-- twoimgs div closed -->
-            <!-- </div> -->
-            <!-- fourth div closed -->
+
             <div class="fourth_div">
                 <div class="course_desp2">
                     <p>
@@ -157,7 +129,7 @@
                     </div>
                 </div>
             </div>
-
+            <!-- fourth div closed -->
             <div class="clear"></div>
             <div class="footer">
                 <h1>Ready to take a journey with us?</h1>
